output/ulNoActionsParser.java
// $ANTLR 3.5.1 /Users/tony/antlrtestings/ulNoActions.g 2020-01-15 23:43:03

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings("all")
public class ulNoActionsParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHARCONSTANT", "COMMENT", "ELSE", 
		"FLOATCONSTANT", "ID", "IF", "INTEGERCONSTANT", "PRINT", "PRINTLN", "RETURN", 
		"STRINGCONSTANT", "TYPE", "WHILE", "WS", "'('", "')'", "'*'", "'+'", "', '", 
		"','", "'-'", "';'", "'<'", "'='", "'=='", "'['", "']'", "'false'", "'return;'", 
		"'true'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int CHARCONSTANT=4;
	public static final int COMMENT=5;
	public static final int ELSE=6;
	public static final int FLOATCONSTANT=7;
	public static final int ID=8;
	public static final int IF=9;
	public static final int INTEGERCONSTANT=10;
	public static final int PRINT=11;
	public static final int PRINTLN=12;
	public static final int RETURN=13;
	public static final int STRINGCONSTANT=14;
	public static final int TYPE=15;
	public static final int WHILE=16;
	public static final int WS=17;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "synpred3_ulNoActions", "compoundType", "moreFormals", 
		"synpred1_ulNoActions", "varDecl", "expr", "type", "whileStatement", "basicExpr", 
		"exprList", "assignStatement", "functionDecl", "multExpr", "identifier", 
		"functionBody", "ifStatement", "block", "literal", "addExpr", "program", 
		"returnStatement", "statement", "exprMore", "synpred2_ulNoActions", "formalParams", 
		"function", "synpred4_ulNoActions", "synpred5_ulNoActions", "equalExpr", 
		"printStatement", "lessThanExpr"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, true, false, false, false, false, 
		    false, false, false, false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public ulNoActionsParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public ulNoActionsParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this, port, null);

		setDebugListener(proxy);
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
	}

	public ulNoActionsParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg, new RecognizerSharedState());
	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

	@Override public String[] getTokenNames() { return ulNoActionsParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/tony/antlrtestings/ulNoActions.g"; }


	protected void mismatch (IntStream input, int ttype, BitSet follow)
	        throws RecognitionException
	{
	        throw new MismatchedTokenException(ttype, input);
	}
	public Object recoverFromMismatchedSet (IntStream input,
	                                      RecognitionException e,
	                                      BitSet follow)
	        throws RecognitionException
	{
	        reportError(e);
	        throw e;
	}



	// $ANTLR start "program"
	// /Users/tony/antlrtestings/ulNoActions.g:39:1: program : ( function )+ EOF ;
	public final void program() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "program");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(39, 0);

		try {
			// /Users/tony/antlrtestings/ulNoActions.g:39:9: ( ( function )+ EOF )
			dbg.enterAlt(1);

			// /Users/tony/antlrtestings/ulNoActions.g:39:11: ( function )+ EOF
			{
			dbg.location(39,11);
			// /Users/tony/antlrtestings/ulNoActions.g:39:11: ( function )+
			int cnt1=0;
			try { dbg.enterSubRule(1);

			loop1:
			while (true) {
				int alt1=2;
				try { dbg.enterDecision(1, decisionCanBacktrack[1]);

				int LA1_0 = input.LA(1);
				if ( (LA1_0==TYPE) ) {
					alt1=1;
				}

				} finally {dbg.exitDecision(1);}

				switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tony/antlrtestings/ulNoActions.g:39:11: function
					{
					dbg.location(39,11);
					pushFollow(FOLLOW_function_in_program26);
					function();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return;}
					EarlyExitException eee = new EarlyExitException(1, input);
					dbg.recognitionException(eee);

					throw eee;
				}
				cnt1++;
			}
			} finally {dbg.exitSubRule(1);}
			dbg.location(39,21);
			match(input,EOF,FOLLOW_EOF_in_program29); if (state.failed) return;
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}
		catch (Exception ex) {
		        // reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		dbg.location(40, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "program");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "program"



	// $ANTLR start "function"
	// /Users/tony/antlrtestings/ulNoActions.g:42:1: function : functionDecl functionBody ;
	public final void function() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "function");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(42, 0);

		try {
			// /Users/tony/antlrtestings/ulNoActions.g:42:9: ( functionDecl functionBody )
			dbg.enterAlt(1);

			// /Users/tony/antlrtestings/ulNoActions.g:42:11: functionDecl functionBody
			{
			dbg.location(42,11);
			pushFollow(FOLLOW_functionDecl_in_function38);
			functionDecl();
			state._fsp--;
			if (state.failed) return;dbg.location(42,24);
			pushFollow(FOLLOW_functionBody_in_function40);
			functionBody();
			state._fsp--;
			if (state.failed) return;
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}
		catch (Exception ex) {
		        // reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		dbg.location(43, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "function");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "function"



	// $ANTLR start "functionDecl"
	// /Users/tony/antlrtestings/ulNoActions.g:45:1: functionDecl : compoundType identifier '(' ( formalParams )* ')' ;
	public final void functionDecl() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "functionDecl");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(45, 0);

		try {
			// /Users/tony/antlrtestings/ulNoActions.g:45:13: ( compoundType identifier '(' ( formalParams )* ')' )
			dbg.enterAlt(1);

			// /Users/tony/antlrtestings/ulNoActions.g:45:15: compoundType identifier '(' ( formalParams )* ')'
			{
			dbg.location(45,15);
			pushFollow(FOLLOW_compoundType_in_functionDecl49);
			compoundType();
			state._fsp--;
			if (state.failed) return;dbg.location(45,28);
			pushFollow(FOLLOW_identifier_in_functionDecl51);
			identifier();
			state._fsp--;
			if (state.failed) return;dbg.location(45,39);
			match(input,18,FOLLOW_18_in_functionDecl53); if (state.failed) return;dbg.location(45,43);
			// /Users/tony/antlrtestings/ulNoActions.g:45:43: ( formalParams )*
			try { dbg.enterSubRule(2);

			loop2:
			while (true) {
				int alt2=2;
				try { dbg.enterDecision(2, decisionCanBacktrack[2]);

				int LA2_0 = input.LA(1);
				if ( (LA2_0==TYPE) ) {
					alt2=1;
				}

				} finally {dbg.exitDecision(2);}

				switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tony/antlrtestings/ulNoActions.g:45:43: formalParams
					{
					dbg.location(45,43);
					pushFollow(FOLLOW_formalParams_in_functionDecl55);
					formalParams();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop2;
				}
			}
			} finally {dbg.exitSubRule(2);}
			dbg.location(45,57);
			match(input,19,FOLLOW_19_in_functionDecl58); if (state.failed) return;
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}
		catch (Exception ex) {
		        // reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		dbg.location(46, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "functionDecl");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "functionDecl"



	// $ANTLR start "formalParams"
	// /Users/tony/antlrtestings/ulNoActions.g:48:1: formalParams : compoundType ID ( moreFormals )* ;
	public final void formalParams() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "formalParams");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(48, 0);

		try {
			// /Users/tony/antlrtestings/ulNoActions.g:48:14: ( compoundType ID ( moreFormals )* )
			dbg.enterAlt(1);

			// /Users/tony/antlrtestings/ulNoActions.g:49:9: compoundType ID ( moreFormals )*
			{
			dbg.location(49,9);
			pushFollow(FOLLOW_compoundType_in_formalParams77);
			compoundType();
			state._fsp--;
			if (state.failed) return;dbg.location(49,22);
			match(input,ID,FOLLOW_ID_in_formalParams79); if (state.failed) return;dbg.location(49,25);
			// /Users/tony/antlrtestings/ulNoActions.g:49:25: ( moreFormals )*
			try { dbg.enterSubRule(3);

			loop3:
			while (true) {
				int alt3=2;
				try { dbg.enterDecision(3, decisionCanBacktrack[3]);

				int LA3_0 = input.LA(1);
				if ( (LA3_0==22) ) {
					alt3=1;
				}

				} finally {dbg.exitDecision(3);}

				switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tony/antlrtestings/ulNoActions.g:49:25: moreFormals
					{
					dbg.location(49,25);
					pushFollow(FOLLOW_moreFormals_in_formalParams81);
					moreFormals();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop3;
				}
			}
			} finally {dbg.exitSubRule(3);}

			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}
		catch (Exception ex) {
		        // reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		dbg.location(50, 8);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "formalParams");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "formalParams"



	// $ANTLR start "moreFormals"
	// /Users/tony/antlrtestings/ulNoActions.g:52:1: moreFormals : ', ' compoundType ID ;
	public final void moreFormals() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "moreFormals");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(52, 0);

		try {
			// /Users/tony/antlrtestings/ulNoActions.g:52:12: ( ', ' compoundType ID )
			dbg.enterAlt(1);

			// /Users/tony/antlrtestings/ulNoActions.g:53:9: ', ' compoundType ID
			{
			dbg.location(53,9);
			match(input,22,FOLLOW_22_in_moreFormals107); if (state.failed) return;dbg.location(53,14);
			pushFollow(FOLLOW_compoundType_in_moreFormals109);
			compoundType();
			state._fsp--;
			if (state.failed) return;dbg.location(53,27);
			match(input,ID,FOLLOW_ID_in_moreFormals111); if (state.failed) return;
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}
		catch (Exception ex) {
		        // reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		dbg.location(54, 8);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "moreFormals");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "moreFormals"



	// $ANTLR start "functionBody"
	// /Users/tony/antlrtestings/ulNoActions.g:56:1: functionBody : '{' ( varDecl )* ( statement )* '}' ;
	public final void functionBody() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "functionBody");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(56, 0);

		try {
			// /Users/tony/antlrtestings/ulNoActions.g:56:13: ( '{' ( varDecl )* ( statement )* '}' )
			dbg.enterAlt(1);

			// /Users/tony/antlrtestings/ulNoActions.g:56:15: '{' ( varDecl )* ( statement )* '}'
			{
			dbg.location(56,15);
			match(input,34,FOLLOW_34_in_functionBody127); if (state.failed) return;dbg.location(56,19);
			// /Users/tony/antlrtestings/ulNoActions.g:56:19: ( varDecl )*
			try { dbg.enterSubRule(4);

			loop4:
			while (true) {
				int alt4=2;
				try { dbg.enterDecision(4, decisionCanBacktrack[4]);

				int LA4_0 = input.LA(1);
				if ( (LA4_0==TYPE) ) {
					alt4=1;
				}

				} finally {dbg.exitDecision(4);}

				switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tony/antlrtestings/ulNoActions.g:56:19: varDecl
					{
					dbg.location(56,19);
					pushFollow(FOLLOW_varDecl_in_functionBody129);
					varDecl();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop4;
				}
			}
			} finally {dbg.exitSubRule(4);}
			dbg.location(56,28);
			// /Users/tony/antlrtestings/ulNoActions.g:56:28: ( statement )*
			try { dbg.enterSubRule(5);

			loop5:
			while (true) {
				int alt5=2;
				try { dbg.enterDecision(5, decisionCanBacktrack[5]);

				int LA5_0 = input.LA(1);
				if ( (LA5_0==CHARCONSTANT||(LA5_0 >= FLOATCONSTANT && LA5_0 <= STRINGCONSTANT)||LA5_0==WHILE||(LA5_0 >= 18 && LA5_0 <= 21)||(LA5_0 >= 23 && LA5_0 <= 26)||LA5_0==28||(LA5_0 >= 30 && LA5_0 <= 33)) ) {
					alt5=1;
				}

				} finally {dbg.exitDecision(5);}

				switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tony/antlrtestings/ulNoActions.g:56:28: statement
					{
					dbg.location(56,28);
					pushFollow(FOLLOW_statement_in_functionBody132);
					statement();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop5;
				}
			}
			} finally {dbg.exitSubRule(5);}
			dbg.location(56,39);
			match(input,35,FOLLOW_35_in_functionBody135); if (state.failed) return;
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}
		catch (Exception ex) {
		        // reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		dbg.location(57, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "functionBody");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "functionBody"



	// $ANTLR start "identifier"
	// /Users/tony/antlrtestings/ulNoActions.g:59:1: identifier : ID ;
	public final void identifier() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "identifier");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(59, 0);

		try {
			// /Users/tony/antlrtestings/ulNoActions.g:59:12: ( ID )
			dbg.enterAlt(1);

			// /Users/tony/antlrtestings/ulNoActions.g:59:14: ID
			{
			dbg.location(59,14);
			match(input,ID,FOLLOW_ID_in_identifier145); if (state.failed) return;
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}
		catch (Exception ex) {
		        // reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		dbg.location(60, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "identifier");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "identifier"



	// $ANTLR start "varDecl"
	// /Users/tony/antlrtestings/ulNoActions.g:62:1: varDecl : compoundType identifier ';' ;
	public final void varDecl() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "varDecl");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(62, 0);

		try {
			// /Users/tony/antlrtestings/ulNoActions.g:62:9: ( compoundType identifier ';' )
			dbg.enterAlt(1);

			// /Users/tony/antlrtestings/ulNoActions.g:62:11: compoundType identifier ';'
			{
			dbg.location(62,11);
			pushFollow(FOLLOW_compoundType_in_varDecl155);
			compoundType();
			state._fsp--;
			if (state.failed) return;dbg.location(62,24);
			pushFollow(FOLLOW_identifier_in_varDecl157);
			identifier();
			state._fsp--;
			if (state.failed) return;dbg.location(62,35);
			match(input,25,FOLLOW_25_in_varDecl159); if (state.failed) return;
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}
		catch (Exception ex) {
		        // reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		dbg.location(63, 8);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "varDecl");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "varDecl"



	// $ANTLR start "compoundType"
	// /Users/tony/antlrtestings/ulNoActions.g:65:1: compoundType : ( type | type '[' INTEGERCONSTANT ']' );
	public final void compoundType() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "compoundType");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(65, 0);

		try {
			// /Users/tony/antlrtestings/ulNoActions.g:65:13: ( type | type '[' INTEGERCONSTANT ']' )
			int alt6=2;
			try { dbg.enterDecision(6, decisionCanBacktrack[6]);

			int LA6_0 = input.LA(1);
			if ( (LA6_0==TYPE) ) {
				int LA6_1 = input.LA(2);
				if ( (LA6_1==ID) ) {
					alt6=1;
				}
				else if ( (LA6_1==29) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 1, input);
						dbg.recognitionException(nvae);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(6);}

			switch (alt6) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tony/antlrtestings/ulNoActions.g:65:15: type
					{
					dbg.location(65,15);
					pushFollow(FOLLOW_type_in_compoundType175);
					type();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /Users/tony/antlrtestings/ulNoActions.g:66:11: type '[' INTEGERCONSTANT ']'
					{
					dbg.location(66,11);
					pushFollow(FOLLOW_type_in_compoundType187);
					type();
					state._fsp--;
					if (state.failed) return;dbg.location(66,16);
					match(input,29,FOLLOW_29_in_compoundType189); if (state.failed) return;dbg.location(66,20);
					match(input,INTEGERCONSTANT,FOLLOW_INTEGERCONSTANT_in_compoundType191); if (state.failed) return;dbg.location(66,36);
					match(input,30,FOLLOW_30_in_compoundType193); if (state.failed) return;
					}
					break;

			}
		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}
		catch (Exception ex) {
		        // reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		dbg.location(67, 8);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "compoundType");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "compoundType"



	// $ANTLR start "type"
	// /Users/tony/antlrtestings/ulNoActions.g:69:1: type : TYPE ;
	public final void type() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "type");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(69, 0);

		try {
			// /Users/tony/antlrtestings/ulNoActions.g:69:5: ( TYPE )
			dbg.enterAlt(1);

			// /Users/tony/antlrtestings/ulNoActions.g:69:7: TYPE
			{
			dbg.location(69,7);
			match(input,TYPE,FOLLOW_TYPE_in_type209); if (state.failed) return;
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}
		catch (Exception ex) {
		        // reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		dbg.location(70, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "type");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "type"



	// $ANTLR start "statement"
	// /Users/tony/antlrtestings/ulNoActions.g:72:1: statement options {backtrack=true; } : ( ifStatement | whileStatement | printStatement | returnStatement | assignStatement | expr ';' );
	public final void statement() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "statement");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(72, 0);

		try {
			// /Users/tony/antlrtestings/ulNoActions.g:74:2: ( ifStatement | whileStatement | printStatement | returnStatement | assignStatement | expr ';' )
			int alt7=6;
			try { dbg.enterDecision(7, decisionCanBacktrack[7]);

			switch ( input.LA(1) ) {
			case IF:
				{
				alt7=1;
				}
				break;
			case WHILE:
				{
				alt7=2;
				}
				break;
			case PRINT:
			case PRINTLN:
				{
				alt7=3;
				}
				break;
			case RETURN:
			case 32:
				{
				alt7=4;
				}
				break;
			case ID:
				{
				int LA7_7 = input.LA(2);
				if ( (synpred5_ulNoActions()) ) {
					alt7=5;
				}
				else if ( (true) ) {
					alt7=6;
				}

				}
				break;
			case CHARCONSTANT:
			case FLOATCONSTANT:
			case INTEGERCONSTANT:
			case STRINGCONSTANT:
			case 18:
			case 20:
			case 21:
			case 24:
			case 25:
			case 26:
			case 28:
			case 31:
			case 33:
				{
				alt7=6;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(7);}

			switch (alt7) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tony/antlrtestings/ulNoActions.g:74:4: ifStatement
					{
					dbg.location(74,4);
					pushFollow(FOLLOW_ifStatement_in_statement232);
					ifStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /Users/tony/antlrtestings/ulNoActions.g:75:11: whileStatement
					{
					dbg.location(75,11);
					pushFollow(FOLLOW_whileStatement_in_statement244);
					whileStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// /Users/tony/antlrtestings/ulNoActions.g:76:11: printStatement
					{
					dbg.location(76,11);
					pushFollow(FOLLOW_printStatement_in_statement256);
					printStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 4 :
					dbg.enterAlt(4);

					// /Users/tony/antlrtestings/ulNoActions.g:77:11: returnStatement
					{
					dbg.location(77,11);
					pushFollow(FOLLOW_returnStatement_in_statement268);
					returnStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 5 :
					dbg.enterAlt(5);

					// /Users/tony/antlrtestings/ulNoActions.g:78:11: assignStatement
					{
					dbg.location(78,11);
					pushFollow(FOLLOW_assignStatement_in_statement281);
					assignStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 6 :
					dbg.enterAlt(6);

					// /Users/tony/antlrtestings/ulNoActions.g:79:11: expr ';'
					{
					dbg.location(79,11);
					pushFollow(FOLLOW_expr_in_statement294);
					expr();
					state._fsp--;
					if (state.failed) return;dbg.location(79,16);
					match(input,25,FOLLOW_25_in_statement296); if (state.failed) return;
					}
					break;

			}
		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}
		catch (Exception ex) {
		        // reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		dbg.location(80, 8);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "statement");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "statement"



	// $ANTLR start "whileStatement"
	// /Users/tony/antlrtestings/ulNoActions.g:82:2: whileStatement : WHILE '(' expr ')' block ;
	public final void whileStatement() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "whileStatement");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(82, 1);

		try {
			// /Users/tony/antlrtestings/ulNoActions.g:83:3: ( WHILE '(' expr ')' block )
			dbg.enterAlt(1);
